# venus

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  build.sh  pyproject.toml  requirements.txt  run_benchmarks.sh  setup.py  venus 3
benchmarks/: PERFORMANCE_COMPARISON.md  QWEN25_ANALYSIS.md
configs/: deployment.example.json
docs/: ARCHITECTURE_SUPPORT.md  checkpoints.md
examples/: basic_usage.py
scripts/: benchmark_llm.py  benchmark_models.py  benchmark_recursive.py  benchmark_vlm.py  compare_models.py  convert_hf_model.py  create_demo_model.py  create_test_model.py  download_model.py  gradio_vlm_chat.py  test_api.py  test_qwen_omni.py
src/c/: architecture.c  architecture.h  attention.c  attention.h  flash_attention.c  inference_engine.c  inference_engine.h  main.c  model_loader.c  model_loader.h  paged_attention.c  quantization.c  quantization.h  tensor.c  tensor.h
src/c/platform/: apple_silicon.c  generic.c  platform.c  platform.h
src/c/utils/: memory_pool.c  sampler.c  tokenizer.c
src/python/: api_server.py
src/rust/: api_server.rs  engine.rs  lib.rs  main.rs  models.rs  platform.rs
src/rust/coreshift/: backend.rs  mod.rs  platform.rs  profiling.rs
src/rust/inferx/: engine.rs  mod.rs  pipeline.rs  scheduler.rs
src/rust/modelrun/: mod.rs  registry.rs  server.rs  telemetry.rs
src/rust/modulus/: mod.rs  pipeline.rs  quantization.rs
venus/: __init__.py  cli.py  core.py  models.py  server.py
